<resources>
    <string name="app_name">OOM</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="agency_menu_item">Agency</string>
    <string name="services_menu_item">Services</string>
    <string name="work_menu_item">Work</string>
    <string name="news_menu_item">News</string>
    <string name="blog_menu_item">Blog</string>
    <string name="contact_menu_item">Contact Us</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_base_actvity">BaseActvity</string>
    <string name="title_activity_agency">AgencyActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agency_name">OOm</string>
    <string name="agency_intro">We are the Navigators of the Digital Frontier because we live and breathe digital. We expertly navigate your business in a rapidly evolving digital landscape. Delivering high quality results through strategic solutions.</string>
    <string name="agency_history1">Founded in 2006 as a search marketing agency, OOm has since grown to become a full-service digital marketing agency committed to working with clients throughout Asia and the Asia Pacific to meet their digital campaign goals. Headquatered in Singapore with offices in Indonesia, and the Philippines, the agency has expanded rapidly to accommodate the growing local and regional demands in digital marketing.</string>
    <string name="agency_goal">The primary goals of OOm is to ensure that our clients will have high quality content and top notch customer service. Our methods to achieve these goals are through our expertise in navigating through the digital ecosystem. With proper strategy and execution, we ensure that our clients will meet their digital campaign objectives. OOm’s digital concept revolves around the 3C’s of digital or 3 Conversion stages.</string>
    <string name="firs_conversior_label">1st Conversion</string>
    <string name="first_convertion_meaning">Online Branding/Presence</string>
    <string name="second_convertion_meaning">2nd Conversion</string>
    <string name="title_activity_seo">Search Engine Optimization</string>
    <string name="title_activity_sem">Search Engine Marketing</string>
    <string name="title_activity_smm">Social Media Marketing</string>
    <string name="title_activity_content_mrktng">Content Marketing</string>
    <string name="title_activity_banner_ad">BannerAdActivity</string>
    <string name="title_activity_web_dev">Web Design and Development</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="title_activity_signup">OOm Signup</string>

    <string-array name="services_array">
        <item>Service?</item>
        <item>Search Engine Optimization</item>
        <item>Searc Engine Marketing</item>
        <item>Social Media Marketing</item>
        <item>Content Marketing</item>
        <item>Banner Advertising</item>
        <item>Web Design and Development</item>
        <item>Baidu Advertising</item>
    </string-array>

    <string-array name="findUs_array">
        <item>How did you find us?</item>
        <item>Google</item>
        <item>Yahoo</item>
        <item>Bing</item>
        <item>Facebook</item>
        <item>Referral</item>
        <item>Events</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_screen_slide">ScreenSlideActivity</string>
    <string name="lorem_ipsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"
    </string>
    <string name="home1">
        We are the Navigators of The Digital Frontier because we live and breathe digital.
    </string>

    <string-array name="services_image_ids">
        <item>@drawable/seo_icon</item>
        <item>@drawable/sem_icon</item>
        <item>@drawable/sem_icon</item>
        <item>@drawable/content_mrtkng_icon</item>
        <item>@drawable/banner_ad_icon</item>
        <item>@drawable/web_dev_icon</item>
    </string-array>

    <string-array name="services_label">
        <item>Search Engine Optimization</item>
        <item>Search Engine Marketing</item>
        <item>Social Media Marketing</item>
        <item>Content Markenting</item>
        <item>Banner Advertising</item>
        <item>Web Design and Development</item>
    </string-array>
    <string name="title_activity_list_user">ListUserActivity</string>
</resources>
