<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.serverus.oom.fragments.FragmentAgency"
    android:baselineAligned="false">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/background_banner"
                        android:src="@drawable/agency_background_banner"
                        android:adjustViewBounds="true"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/linearLayout"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/agency_name"
                            android:id="@+id/textView7"
                            android:textColor="#FFFFFF"
                            android:layout_below="@+id/linearLayout"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agency_intro"
                            android:id="@+id/textView8"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:textColor="#FFFFFF"
                            android:padding="5dp"
                            android:maxLines="3"
                            android:minLines="3" />

                    </LinearLayout>

                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agency_history1"
                    android:id="@+id/textView9"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:singleLine="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agency_goal"
                    android:id="@+id/textView10"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:src="@drawable/first_conversion"
                            android:baselineAlignBottom="false"
                            android:clickable="false"
                            android:id="@+id/first_converstion_image"
                            android:scaleType="centerInside"
                            android:maxHeight="200dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/firs_conversior_label"
                            android:id="@+id/textView11"
                            android:singleLine="false"
                            android:textAlignment="center"
                            android:layout_below="@+id/first_converstion_image"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="bottom"
                            android:textColor="#58595b"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/first_convertion_meaning"
                            android:id="@+id/textView12"
                            android:singleLine="false"
                            android:textAlignment="center"
                            android:layout_below="@+id/textView11"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="bottom"/>


                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:src="@drawable/second_conversion"
                            android:baselineAlignBottom="false"
                            android:clickable="false"
                            android:id="@+id/second_converstion_image"
                            android:scaleType="centerInside"
                            android:maxHeight="200dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/second_convertion_meaning"
                            android:id="@+id/textView13"
                            android:singleLine="false"
                            android:textAlignment="center"
                            android:layout_below="@+id/second_converstion_image"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="bottom"
                            android:textColor="#58595b"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="Traffic to Website"
                            android:id="@+id/textView14"
                            android:singleLine="false"
                            android:textAlignment="center"
                            android:layout_below="@+id/textView13"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="bottom"/>


                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:src="@drawable/third_conversion"
                            android:baselineAlignBottom="false"
                            android:clickable="false"
                            android:id="@+id/third_conversion_image"
                            android:scaleType="centerInside"
                            android:maxHeight="200dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="3rd Conversion"
                            android:id="@+id/textView15"
                            android:singleLine="false"
                            android:textAlignment="center"
                            android:layout_below="@+id/third_conversion_image"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="bottom"
                            android:textColor="#58595b"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="Leads/Enquiries/e-Sales"
                            android:id="@+id/textView16"
                            android:singleLine="false"
                            android:textAlignment="center"
                            android:layout_below="@+id/textView15"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="bottom"/>
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

</LinearLayout>
